--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -43,6 +43,10 @@
 %\usepackage{microtype}
 \usepackage{alltt}
 \usepackage{listings}
+
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{corollary}{Corollary}[theorem]
 %\usepackage{natbib}
 %\usepackage{microtype}
 % Coq lstlisting
@@ -185,7 +189,7 @@
 %%% Local IspellDict: british
 %%% TeX-master: "main.tex"
 %%% End: 
-\newtheorem{theorem}{Theorem}[section]
+
 %%epistemic 
 %
 \newcommand{\Rel}[1]{R_{#1}}
